# megane-old

./: Cargo.toml  Dockerfile  coverage.sh  docker-compose.yml
src/: app.rs  globalstate.rs  instruction.rs  lib.rs  main.rs  ui.rs
src/components/: logs.rs  mod.rs  spinner.rs  textinput.rs
src/components/tab/: logstab.rs  metricstab.rs  mod.rs
src/utils/: logevent_list.rs  loggroup_menulist.rs  mod.rs
tests/: utils_test.rs
