[package]
name = "megane"
version = "0.0.1"
authors = ["zeroclock <zeroclock@icloud.com>"]
description = "AWS Cloudwatch cli viewer"
edition = "2018"
homepage = "https://github.com/zeroclock/megane"
repository = "https://github.com/zeroclock/megane"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
crossterm = "0.17"
tui = { version = "0.10", default-features = false, features = ['crossterm'] }
anyhow = "1.0.32"
rusoto_core = "0.45.0"
rusoto_cloudwatch = "0.45.0"
rusoto_logs = "0.45.0"
tokio = { version = "0.2.22", features = ["full"] }
async-trait = "0.1.40"
chrono = "0.4.15"
